<resources>
    <string name="app_name">Area</string>
    <string name="area">Area</string>
    <string name="welcome_back">Welcome To the area</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="Outlook">Outlook</string>
    <string name="Messenger">Messenger</string>
    <string name="OneDrive">OneDrive</string>
    <string name="Insta">Instagram</string>
    <string name="GitHub">GitHub</string>
    <string name="Discord">Discord</string>
    <string name="CalendarGoogle">CalendarGoogle</string>
    <string name="Connection">Register yourself at your services</string>
    <string name="Network">Enter the new network location here</string>
    <string name="currentIp">Current network location : </string>
    <string name="Ok">OK</string>
    <string name="navBarConnection">Connection</string>
    <string name="navBarService">Service</string>
    <string name="navBarNetLoc">Ip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_draw">Draw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_nav_draw">NavDraw</string>
</resources>
