<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_connection">

    <fragment
        android:id="@+id/navigation_connection"
        android:name="com.example.area.view.connection.ConnectionFragment"
        android:label="@string/navBarConnection"
        tools:layout="@layout/connection" />

    <fragment
        android:id="@+id/navigation_service"
        android:name="com.example.area.view.service.ServiceFragment"
        android:label="@string/navBarService"
        tools:layout="@layout/service" />

    <fragment
        android:id="@+id/navigation_network_location"
        android:name="com.example.area.view.networkLocation.NetworkLocationFragment"
        android:label="@string/navBarNetLoc"
        tools:layout="@layout/config_serveur" />
</navigation>
