<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackDiscord">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:background="@color/blueDiscord"
            android:gravity="center_vertical"
            android:text="@string/currentIp"
            android:textColor="@color/whiteFont" />

        <EditText
            android:id="@+id/Netlocation"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:autofillHints="no"
            android:background="@color/blueDiscord"
            android:gravity="center"
            android:hint="@string/Network"
            android:inputType="numberDecimal"
            android:textColorHint="@color/whiteFont" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#43B581"
            android:text="@string/Ok"
            android:textColor="@color/whiteFont" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>